--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'/>
     <script type="text/javascript" src="libs.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="esfera.js"></script>
   </head>
   <body style='margin:0px' onload='main()'>
     <canvas id='canvas'
