--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,12 +2,19 @@
 <html>
   <head>
     <meta charset='utf-8'/>
-    <script type="text/javascript" src="libs.js"></script>
-    <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="esfera.js"></script>
+    <script type="text/javascript" src="js/libs.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/esfera.js"></script>
+    <script type="text/javascript" src="js/astro.js"></script>
+    <script type="text/javascript" src="js/planeta.js"></script>
+    <script type="text/javascript" src="js/satelite.js"></script>
+    <script type="text/javascript" src="js/canvas.js"></script>
+    <script type="text/javascript" src="js/mouse.js"></script>
+    <script type="text/javascript" src="js/shaders.js"></script>
+    <script type="text/javascript" src="js/program.js"></script>
   </head>
   <body style='margin:0px' onload='main()'>
     <canvas id='canvas'
-            style='position: absolute; background-color: black;'></canvas>
+            style='position: absolute; background-color: cyan;'></canvas>
   </body>
 </html>
