--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'/>
     <script type="text/javascript" src="js/libs.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/esfera.js"></script>
     <script type="text/javascript" src="js/astro.js"></script>
     <script type="text/javascript" src="js/planeta.js"></script>
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/mouse.js"></script>
     <script type="text/javascript" src="js/shaders.js"></script>
     <script type="text/javascript" src="js/program.js"></script>
+    <script type="text/javascript" src="js/matrix.js"></script>
   </head>
   <body style='margin:0px' onload='main()'>
     <canvas id='canvas'
