funcionando la parte basica

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,17 +2,21 @@
 <html>
   <head>
     <meta charset='utf-8'/>
+    <title>Tierra y Luna con WebGL</title>
     <script type="text/javascript" src="js/libs.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/esfera.js"></script>
     <script type="text/javascript" src="js/astro.js"></script>
     <script type="text/javascript" src="js/planeta.js"></script>
     <script type="text/javascript" src="js/satelite.js"></script>
+    <script type="text/javascript" src="js/grupo_orbital.js"></script>
     <script type="text/javascript" src="js/canvas.js"></script>
     <script type="text/javascript" src="js/mouse.js"></script>
     <script type="text/javascript" src="js/shaders.js"></script>
     <script type="text/javascript" src="js/program.js"></script>
     <script type="text/javascript" src="js/matrix.js"></script>
+    <script type="text/javascript" src="js/material.js"></script>
+    <script type="text/javascript" src="js/luz.js"></script>
   </head>
   <body style='margin:0px' onload='main()'>
     <canvas id='canvas'
